--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,14 +16,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
       - name: Install Dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          playwright install chromium --with-deps
+          python -m playwright install --with-deps chromium
 
       - name: Run Agent
         env:
@@ -37,3 +38,4 @@ jobs:
         with:
           name: hotel-snapshots
           path: screenshots/
+
