--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -19,12 +21,16 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip'
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m playwright install --with-deps chromium
+
+      - name: Ensure screenshots directory
+        run: mkdir -p screenshots
 
       - name: Run Agent
         env:
@@ -38,4 +44,3 @@ jobs:
         with:
           name: hotel-snapshots
           path: screenshots/
-
